[project]
name = "policy-websocket"
version = "0.1.0"
description = "WebSocket-based policy client/server for robot learning"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "websockets>=11.0",
    "msgpack>=1.0.5",
    "numpy>=1.22.4,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/policy_websocket"]
